@@ -15,6 +15,7 @@ Ver.4.6 (in development)
 - Support syncing with multiple clients with Pusher using FileMaker datasource (except for portal=>true context).
 - Query conditions, sort fields, record number and updating context can be described in data-im attributes.
   This feature realizes non-programming search page.
+- Add getTotalCount() to DB_FileMaker_FX class to get the total number of records in the main table.
 - [INFO] FileMaker Server 10 has been deprecated. INTER-Mediator will require FileMaker Server 11 or later if using 
   FileMaker Server.
 - [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuser' and some
